syntax = "proto3";

import "google/protobuf/any.proto";

package cosmos.proposals.v1;

message PartialTx { PartialTxBody body = 1; }
message PartialTxBody { repeated google.protobuf.Any messages = 1; }

message Events {
  repeated GovParamsChanges gov_params_changes = 1;
  repeated string passed_proposal_ids = 2;
  repeated NewProposalWithType new_proposals_with_types = 3;
}

message GovParamsChanges {
  string proposal_id = 1;
  GovParamsOptional params = 2;
}

message NewProposalWithType {
  string proposal_id = 1;
  string proposal_type = 2;
}

message GovParamsOptional {
  optional VotingParamsOptional voting_params = 1;
  optional TallyParamsOptional tally_params = 2;
  optional DepositParamsOptional deposit_params = 3;
}

message VotingParamsOptional { 
  optional string voting_period = 1; 
  optional string expedited_voting_period = 2;
}

message TallyParamsOptional {
  optional string quorum = 1;
  optional string expedited_quorum = 2;
  optional string threshold = 3;
  optional string expedited_threshold = 4;
  optional string veto_threshold = 5;
}

message DepositParamsOptional {
  repeated Deposit min_deposit = 1;
  repeated Deposit expedited_min_deposit = 2;
  optional string max_deposit_period = 3;
}

message Deposit {
  string denom = 1;
  string amount = 2;
}